--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -2,7 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
-    android:background="#000"
+    android:background="@color/black"
     android:orientation="vertical">
 
     <LinearLayout
@@ -19,7 +19,7 @@
             android:layout_weight="30"
             android:gravity="bottom"
             android:text="Foreign Currency"
-            android:textColor="#ff22e9ff"/>
+            android:textColor="@color/turquoise"/>
 
         <Spinner
             android:id="@+id/spn_for"
@@ -38,7 +38,7 @@
             android:layout_weight="15"
             android:gravity="bottom"
             android:text="Enter foreign currency amount here:"
-            android:textColor="#666"
+            android:textColor="@color/grey_med"
             android:textSize="12sp"/>
     </LinearLayout>
 
@@ -48,7 +48,7 @@
         android:layout_marginLeft="10dp"
         android:layout_marginRight="10dp"
         android:layout_weight="20"
-        android:background="#222">
+        android:background="@color/grey_dark">
 
         <EditText
             android:id="@+id/edt_amount"
@@ -57,11 +57,11 @@
             android:layout_gravity="center_vertical"
             android:layout_marginLeft="5dp"
             android:layout_marginRight="5dp"
-            android:background="#111"
+            android:background="@color/grey_very_dark"
             android:digits="0123456789."
             android:gravity="center_vertical"
             android:inputType="numberDecimal"
-            android:textColor="#FFF"
+            android:textColor="@color/white"
             android:textSize="30sp">
 
         <requestFocus/>
@@ -76,7 +76,7 @@
         android:layout_marginRight="10dp"
         android:layout_weight="10"
         android:text="Calculate"
-        android:textColor="#AAA"/>
+        android:textColor="@color/grey_light"/>
 
     <LinearLayout
         android:layout_width="fill_parent"
@@ -92,7 +92,7 @@
             android:layout_weight="30"
             android:gravity="bottom"
             android:text="Home Currency"
-            android:textColor="#ff22e9ff"/>
+            android:textColor="@color/turquoise"/>
 
         <Spinner
             android:id="@+id/spn_hom"
@@ -111,7 +111,7 @@
             android:layout_weight="15"
             android:gravity="bottom"
             android:text="Calculated result in home currency:"
-            android:textColor="#666"
+            android:textColor="@color/grey_med"
             android:textSize="12sp"/>
     </LinearLayout>
 
@@ -121,7 +121,7 @@
         android:layout_marginLeft="10dp"
         android:layout_marginRight="10dp"
         android:layout_weight="20"
-        android:background="#222">
+        android:background="@color/grey_dark">
 
         <TextView
             android:layout_width="fill_parent"
@@ -129,7 +129,7 @@
             android:layout_gravity="center_vertical"
             android:layout_marginLeft="5dp"
             android:layout_marginRight="5dp"
-            android:background="#333"
+            android:background="@color/grey_med_dark"
             android:gravity="center_vertical"
             android:textSize="30sp"
             android:typeface="normal"/>
