创建并应用样式

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,14 +12,8 @@
         android:orientation="vertical">
 
         <TextView
-            android:layout_width="fill_parent"
-            android:layout_height="0dp"
-            android:layout_marginLeft="10dp"
-            android:layout_marginRight="10dp"
-            android:layout_weight="30"
-            android:gravity="bottom"
             android:text="Foreign Currency"
-            android:textColor="@color/turquoise"/>
+            style="@style/label.curr" />
 
         <Spinner
             android:id="@+id/spn_for"
@@ -31,24 +25,11 @@
             android:gravity="top"/>
 
         <TextView
-            android:layout_width="fill_parent"
-            android:layout_height="0dp"
-            android:layout_marginLeft="10dp"
-            android:layout_marginRight="10dp"
-            android:layout_weight="15"
-            android:gravity="bottom"
             android:text="Enter foreign currency amount here:"
-            android:textColor="@color/grey_med"
-            android:textSize="12sp"/>
+            style="@style/label.desc" />
     </LinearLayout>
 
-    <LinearLayout
-        android:layout_width="fill_parent"
-        android:layout_height="0dp"
-        android:layout_marginLeft="10dp"
-        android:layout_marginRight="10dp"
-        android:layout_weight="20"
-        android:background="@color/grey_dark">
+    <LinearLayout style="@style/layout_back">
 
         <EditText
             android:id="@+id/edt_amount"
@@ -85,14 +66,8 @@
         android:orientation="vertical">
 
         <TextView
-            android:layout_width="fill_parent"
-            android:layout_height="0dp"
-            android:layout_marginLeft="10dp"
-            android:layout_marginRight="10dp"
-            android:layout_weight="30"
-            android:gravity="bottom"
             android:text="Home Currency"
-            android:textColor="@color/turquoise"/>
+            style="@style/label.curr" />
 
         <Spinner
             android:id="@+id/spn_hom"
@@ -104,24 +79,11 @@
             android:gravity="top"/>
 
         <TextView
-            android:layout_width="fill_parent"
-            android:layout_height="0dp"
-            android:layout_marginLeft="10dp"
-            android:layout_marginRight="10dp"
-            android:layout_weight="15"
-            android:gravity="bottom"
             android:text="Calculated result in home currency:"
-            android:textColor="@color/grey_med"
-            android:textSize="12sp"/>
+            style="@style/label.desc" />
     </LinearLayout>
 
-    <LinearLayout
-        android:layout_width="fill_parent"
-        android:layout_height="0dp"
-        android:layout_marginLeft="10dp"
-        android:layout_marginRight="10dp"
-        android:layout_weight="20"
-        android:background="@color/grey_dark">
+    <LinearLayout style="@style/layout_back">
 
         <TextView
             android:layout_width="fill_parent"
