Creates button selector

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -57,7 +57,8 @@
         android:layout_marginRight="10dp"
         android:layout_weight="10"
         android:text="Calculate"
-        android:textColor="@color/grey_light"/>
+        android:textColor="@color/white"
+        android:background="@drawable/button_selector"/>
 
     <LinearLayout
         android:layout_width="fill_parent"
@@ -87,6 +88,7 @@
 
         <TextView
             android:id="@+id/txt_converted"
+            android:textColor="@color/white"
             android:layout_width="fill_parent"
             android:layout_height="50dp"
             android:layout_gravity="center_vertical"
